--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@solana/web3.js": "^1.41.3",
+    "@supabase/supabase-js": "^1.35.2",
+    "autoprefixer": "^10.4.7",
     "next": "12.1.6",
+    "postcss": "^8.4.13",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-hook-form": "^7.30.0",
+    "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
     "@types/node": "17.0.31",
